--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "chalk": "^5.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
